# cursor_hackathon_finance_health

./: .env.example  .gitignore  README.md  pyproject.toml
samples/: sample.csv
src/finance_health/advice/: graph.py  langchain_agent.py  langchain_tools.py  prompts.py  sanitize.py
src/finance_health/analytics/: categorize.py  insights.py  metrics.py  report.py  scoring.py
src/finance_health/parsing/: ingest.py  interfaces.py  llm_extractor.py
src/finance_health/parsing/normalizers/: base_normalizer.py
src/finance_health/parsing/readers/: csv_reader.py  xlsx_reader.py
src/finance_health/settings/: config.py
src/finance_health/storage/: loader.py  maintenance.py  report_io.py  repository.py  schema.py  sessions.py
src/finance_health/ui/: app.py  state.py
src/finance_health/ui/components/: charts.py  kpi.py
src/finance_health/ui/pages/: 01_import.py  02_dashboard.py  03_advice.py  04_sessions.py  05_settings.py
src/finance_health/utils/: logging.py  text.py
